--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>babylon-effect-uncurried</title>
   <style>
+    html,
     body {
-      margin: 0;
       overflow: hidden;
-      text-align: center;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    #container {
+      width: 100%;
+      height: 100%;
+      touch-action: none;
     }
   </style>
 </head>
 
 <body>
-  <div id="container"></div>
+  <canvas id="container"></canvas>
   <script src="./index.js"></script>
 </body>
 
